# build-ml-pipeline-for-short-term-rental-prices

./: .pre-commit-config.yaml  .secrets.baseline  README.md  activate.sh  conda.yml  config.yaml  environment.yml  main.py  pyproject.toml
components/get_data/: conda.yml
components/test_regression_model/: conda.yml
components/train_val_test_split/: conda.yml
cookie-mlflow-step/{{cookiecutter.step_name}}/: conda.yml
src/basic_cleaning/: MLproject  conda.yml  run.py
src/data_check/: conda.yml  test_data.py
src/eda/: EDA.ipynb  MLproject  conda.yml
src/train_random_forest/: MLproject  conda.yml  run.py
