[tool.poetry]
name = "build-ml-pipeline"
version = "0.1.0"
description = ""
authors = ["Daniel Baeza <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = "^3.6.0"
detect-secrets = "^1.4.0"
autopep8 = "2.0.4"
flake8 = "^7.0.0"
mlflow = "^2.10.0"
wandb = "^0.16.2"
seaborn = "^0.12.2"
cyclonedx-bom = "^3.11.7"
hydra-core = "^1.3"
matplotlib = "^3.8.2"
jupyterlab = "^4.0.11"
pandas = "^2.2.0"
pyarrow = "^14.0.2"
ydata-profiling = "^4.6.4"
ipywidgets = "^8.1.1"
scikit-learn = "^1.4.0"
pytest = "^8.0.0"
requests = "^2.31.0"
plotly = "^5.18.0"
pillow = "^10.2.0"
hydra-joblib-launcher = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
